性能优化: 多线程

--- a/src/main/resources/filters/product/log4j.properties
+++ b/src/main/resources/filters/product/log4j.properties
@@ -17,6 +17,7 @@ log4j.logger.org.apache.ibatis=INFO, CONSOLE
 log4j.logger.com.mybatis=INFO, CONSOLE
 log4j.logger.org.springframework=INFO, CONSOLE
 
+log4j.logger.cn.easybuild=INFO, CONSOLE
 log4j.logger.com.caul.modules=INFO, CONSOLE, FILE
 log4j.logger.com.caul.sys=INFO, CONSOLE, FILE
 log4j.logger.com.caul.core=INFO, CONSOLE, FILE
