--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
     <packaging>pom</packaging>
 
     <properties>
-        <org.springframework-version>4.1.1.RELEASE</org.springframework-version>
+        <org.springframework-version>4.3.18.RELEASE</org.springframework-version>
         <powermock.version>1.6.3</powermock.version>
+        <jackson.version>2.8.11</jackson.version>
     </properties>
 
     <dependencies>
@@ -177,32 +178,32 @@
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-base</artifactId>
-            <version>2.3.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.3.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.3.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.3.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.3.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-jaxb-annotations</artifactId>
-            <version>2.3.2</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- db -->
